syntax = "proto3";

option go_package = "github.com/daikideal/go-grpc-sample/user";

package user;

service UserService {
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}
